# bookstore

./: .gitignore  .pylintrc  README.md
.github/workflows/: pylint.yml
api/: Dockerfile  README.md  alembic.ini  pyproject.toml
api/src/: config.py  decorators.py  main.py
api/src/db/: base.py  models.py
api/src/db/migrations/: env.py
api/src/db/migrations/versions/: 1ebd778a5494_initial.py
api/src/domain/: book_entity.py
api/src/models/: book.py
api/src/repository/: base_repo.py  book_repo.py
api/src/routes/: book.py  books.py
api/src/service/: book_service.py
api/tests/routes/: base_test.py  books_test.py
terraform/: main.tf  providers.tf  variables.tf
terraform/modules/app/: ecr.tf  main.tf  network.tf  outputs.tf  role_policy.tf
