[tool.poetry]
name = "api"
version = "0.1.0"
description = "Bookstore API"
authors = ["Rohit Bansal"]
readme = "README.md"

packages= [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.3.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
antidote = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "*"
httpx = "^0.27.0"
typing-extensions = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src.main:start"
